--- a/capybara-about.html
+++ b/capybara-about.html
@@ -216,27 +216,57 @@
 
         .gallery-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: calc(var(--spacing-unit) * 3);
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 1.5rem;
             margin-bottom: calc(var(--spacing-unit) * 6);
         }
 
         .gallery-item {
-            background: linear-gradient(135deg, var(--secondary-color), var(--accent-color));
-            aspect-ratio: 1;
+            position: relative;
+            overflow: hidden;
             border-radius: var(--border-radius);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 60px;
+            aspect-ratio: 1;
             cursor: pointer;
             transition: var(--transition);
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
         }
 
-        .gallery-item:hover {
+        .gallery-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.3s ease;
+        }
+
+        .gallery-item:hover img {
             transform: scale(1.05);
-            box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+        }
+
+        .gallery-caption {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);
+            color: white;
+            padding: 1rem;
+            transform: translateY(100%);
+            transition: transform 0.3s ease;
+        }
+
+        .gallery-item:hover .gallery-caption {
+            transform: translateY(0);
+        }
+
+        .gallery-caption strong {
+            display: block;
+            margin-bottom: 0.5rem;
+            font-size: 1rem;
+        }
+
+        .gallery-caption p {
+            font-size: 0.9rem;
+            margin: 0;
         }
 
         /* Комментарии */
@@ -454,14 +484,55 @@
 
             <!-- Галерея -->
             <section class="gallery-section">
-                <h2>Галерея капибар</h2>
+                <h2>🖼️ Галерея капибар</h2>
                 <div class="gallery-grid">
-                    <div class="gallery-item">🐹</div>
-                    <div class="gallery-item">🌊</div>
-                    <div class="gallery-item">🌿</div>
-                    <div class="gallery-item">👨‍👩‍👧‍👦</div>
-                    <div class="gallery-item">🌅</div>
-                    <div class="gallery-item">💚</div>
+                    <div class="gallery-item">
+                        <img src="https://images.unsplash.com/photo-1585110396000-c9ffd4e4b308?w=400&h=400&fit=crop" alt="Капибара в воде">
+                        <div class="gallery-caption">
+                            <strong>Капибара в воде</strong>
+                            <p>Отличные пловцы с перепончатыми лапами</p>
+                        </div>
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="https://images.unsplash.com/photo-1614027164847-1b28cfe1df60?w=400&h=400&fit=crop" alt="Капибара на траве">
+                        <div class="gallery-caption">
+                            <strong>Капибара на траве</strong>
+                            <p>Едят около 3.5 кг растительности в день</p>
+                        </div>
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="https://images.unsplash.com/photo-1587300003388-59208cc962cb?w=400&h=400&fit=crop" alt="Портрет капибары">
+                        <div class="gallery-caption">
+                            <strong>Дружелюбный характер</strong>
+                            <p>Спокойные и миролюбивые животные</p>
+                        </div>
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="https://images.unsplash.com/photo-1610768764270-d4a2e9c4d10f?w=400&h=400&fit=crop" alt="Капибара в группе">
+                        <div class="gallery-caption">
+                            <strong>Социальные животные</strong>
+                            <p>Живут группами от 10 до 100 особей</p>
+                        </div>
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="https://images.unsplash.com/photo-1576505016048-940f5aeb799a?w=400&h=400&fit=crop" alt="Капибара ест">
+                        <div class="gallery-caption">
+                            <strong>Травоядные</strong>
+                            <p>Питаются травой и водными растениями</p>
+                        </div>
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="https://images.unsplash.com/photo-1550258987-920a2eae7d59?w=400&h=400&fit=crop" alt="Капибара отдыхает">
+                        <div class="gallery-caption">
+                            <strong>Отдыхают много</strong>
+                            <p>До 16 часов в день отдыхают и спят</p>
+                        </div>
+                    </div>
                 </div>
             </section>
 
