--- a/capybara-login.html
+++ b/capybara-login.html
@@ -141,6 +141,8 @@
             text-decoration: none;
             font-weight: 600;
             transition: var(--transition);
+            display: inline-block;
+            margin-top: calc(var(--spacing-unit) * 1.5);
         }
 
         .login-footer a:hover {
