--- a/capybara-register.html
+++ b/capybara-register.html
@@ -149,6 +149,8 @@
             text-decoration: none;
             font-weight: 600;
             transition: var(--transition);
+            display: inline-block;
+            margin-top: calc(var(--spacing-unit) * 1.5);
         }
 
         .register-footer a:hover {
