Fix: restore gallery images from Unsplash and add comment moderation system

--- a/capybara-about.html
+++ b/capybara-about.html
@@ -424,7 +424,7 @@
     <!-- Навигация -->
     <header class="navbar">
         <div class="container navbar-container">
-            <div class="logo">🐹 Капибара Сообщество</div>
+            <div class="logo"> Капибара Сообщество</div>
             <nav class="nav-links">
                 <a href="capybara-community.html">Главная</a>
                 <a href="capybara-about.html" class="active">О капибарах</a>
@@ -447,7 +447,7 @@
     <main>
         <!-- Заголовок страницы -->
         <section class="page-header">
-            <h1>О капибарах 🐹</h1>
+            <h1>О капибарах </h1>
             <p>Познакомьтесь с самыми дружелюбными животными на планете</p>
         </section>
 
@@ -485,7 +485,7 @@
 
             <!-- Галерея -->
             <section class="gallery-section">
-                <h2>🖼️ Галерея капибар</h2>
+                <h2> Галерея капибар</h2>
                 <div class="gallery-grid">
                     <div class="gallery-item">
                         <img src="https://images.unsplash.com/photo-1585110396000-c9ffd4e4b308?w=400&h=400&fit=crop" alt="Капибара в воде">
