--- a/capybara-community.html
+++ b/capybara-community.html
@@ -440,7 +440,7 @@
     <!-- Навигация -->
     <header class="navbar">
         <div class="container navbar-container">
-            <div class="logo">🐹 Капибара Сообщество</div>
+            <div class="logo"> Капибара Сообщество</div>
             <nav class="nav-links">
                 <a href="capybara-community.html" class="active">Главная</a>
                 <a href="capybara-about.html">О капибарах</a>
@@ -464,7 +464,7 @@
         <!-- Герой секция -->
         <section class="hero">
             <div class="hero-content">
-                <h1>Добро пожаловать в мир капибар! 🌊</h1>
+                <h1>Добро пожаловать в мир капибар! </h1>
                 <p>Дружелюбное онлайн-сообщество для людей, которые любят самых милых животных на планете</p>
                 <button class="btn-primary btn-large" onclick="scrollToComments()">Присоединиться</button>
             </div>
@@ -483,7 +483,7 @@
         <!-- Секция комментариев -->
         <section class="comments-section" id="comments-section">
             <div class="container">
-                <h2>💬 Лента сообщества</h2>
+                <h2> Лента сообщества</h2>
 
                 <!-- Форма для нового комментария -->
                 <div id="comment-form-container">
