--- a/capybara-login.html
+++ b/capybara-login.html
@@ -168,7 +168,7 @@
         <a href="capybara-community.html" class="back-link">← На главную</a>
 
         <div class="login-header">
-            <div class="logo">🐹</div>
+            <div class="logo"></div>
             <h1>Вход</h1>
             <p>Добро пожаловать обратно в сообщество</p>
         </div>
