--- a/capybara-register.html
+++ b/capybara-register.html
@@ -186,7 +186,7 @@
         <a href="capybara-community.html" class="back-link">← На главную</a>
 
         <div class="register-header">
-            <div class="logo">🐹</div>
+            <div class="logo"></div>
             <h1>Регистрация</h1>
             <p>Присоединяйтесь к нашему сообществу</p>
         </div>
