--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
     <div class="container fade-in">
         <!-- Header -->
         <div class="header" id="home">
-            <h1>🐹 Capybara Community</h1>
+            <h1> Capybara Community</h1>
             <p>Добро пожаловать в сообщество любителей капибар!</p>
             <div class="status-badge">✅ Production Ready</div>
         </div>
@@ -444,7 +444,7 @@
 
     <!-- Footer -->
     <footer>
-        <p><strong>🐹 Capybara Community v1.0.0</strong></p>
+        <p><strong> Capybara Community v1.0.0</strong></p>
         <p>Полнофункциональное веб-сообщество любителей капибар</p>
         <p style="margin-top: 1rem; font-size: 0.9rem; opacity: 0.9;">© 2025 Capybara Community | Made with 💚</p>
     </footer>
