--- a/capybara-profile.html
+++ b/capybara-profile.html
@@ -326,7 +326,7 @@
     <!-- Навигация -->
     <header class="navbar">
         <div class="container navbar-container">
-            <div class="logo">🐹 Капибара Сообщество</div>
+            <div class="logo"> Капибара Сообщество</div>
             <nav class="nav-links">
                 <a href="capybara-community.html">Главная</a>
                 <a href="capybara-about.html">О капибарах</a>
