Add admin post system with comments and contact email

--- a/capybara-about.html
+++ b/capybara-about.html
@@ -579,6 +579,7 @@
             </div>
             <div class="footer-section">
                 <h4>Контакты</h4>
+                <p>📧 <a href="mailto:viktoruapogiba@gmail.com" style="color: var(--secondary-color); text-decoration: none;">viktoruapogiba@gmail.com</a></p>
                 <p>Свяжитесь с нами для вопросов!</p>
             </div>
         </div>
