--- a/index.html
+++ b/index.html
@@ -444,8 +444,9 @@
 
     <!-- Footer -->
     <footer>
-        <p><strong> Capybara Community v1.0.0</strong></p>
+        <p><strong>🐹 Capybara Community v1.0.0</strong></p>
         <p>Полнофункциональное веб-сообщество любителей капибар</p>
+        <p>📧 <a href="mailto:viktoruapogiba@gmail.com" style="color: #d4a574; text-decoration: none;">viktoruapogiba@gmail.com</a></p>
         <p style="margin-top: 1rem; font-size: 0.9rem; opacity: 0.9;">© 2025 Capybara Community | Made with 💚</p>
     </footer>
 
