Add likes with capybara icon and replace gallery images with local files

--- a/capybara-about.html
+++ b/capybara-about.html
@@ -488,7 +488,7 @@
                 <h2> Галерея капибар</h2>
                 <div class="gallery-grid">
                     <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1585110396000-c9ffd4e4b308?w=400&h=400&fit=crop" alt="Капибара в воде">
+                        <img src="images/загруженное.jpg" alt="Капибара в воде">
                         <div class="gallery-caption">
                             <strong>Капибара в воде</strong>
                             <p>Отличные пловцы с перепончатыми лапами</p>
@@ -496,7 +496,7 @@
                     </div>
 
                     <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1614027164847-1b28cfe1df60?w=400&h=400&fit=crop" alt="Капибара на траве">
+                        <img src="images/загруженное1.jpg" alt="Капибара на траве">
                         <div class="gallery-caption">
                             <strong>Капибара на траве</strong>
                             <p>Едят около 3.5 кг растительности в день</p>
@@ -504,7 +504,7 @@
                     </div>
 
                     <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1587300003388-59208cc962cb?w=400&h=400&fit=crop" alt="Портрет капибары">
+                        <img src="images/загруженное2.jpg" alt="Портрет капибары">
                         <div class="gallery-caption">
                             <strong>Дружелюбный характер</strong>
                             <p>Спокойные и миролюбивые животные</p>
@@ -512,7 +512,7 @@
                     </div>
 
                     <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1610768764270-d4a2e9c4d10f?w=400&h=400&fit=crop" alt="Капибара в группе">
+                        <img src="images/загруженное3.jpg" alt="Капибара в группе">
                         <div class="gallery-caption">
                             <strong>Социальные животные</strong>
                             <p>Живут группами от 10 до 100 особей</p>
@@ -520,7 +520,7 @@
                     </div>
 
                     <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1576505016048-940f5aeb799a?w=400&h=400&fit=crop" alt="Капибара ест">
+                        <img src="images/загруженное4.jpg" alt="Капибара ест">
                         <div class="gallery-caption">
                             <strong>Травоядные</strong>
                             <p>Питаются травой и водными растениями</p>
@@ -528,7 +528,7 @@
                     </div>
 
                     <div class="gallery-item">
-                        <img src="https://images.unsplash.com/photo-1550258987-920a2eae7d59?w=400&h=400&fit=crop" alt="Капибара отдыхает">
+                        <img src="images/капибара среди цветов🌸.jpg" alt="Капибара отдыхает">
                         <div class="gallery-caption">
                             <strong>Отдыхают много</strong>
                             <p>До 16 часов в день отдыхают и спят</p>
@@ -591,6 +591,7 @@
     <script src="capybara-script.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
+            initLikes();
             updateAuthUI();
             loadComments('about');
             
