--- a/capybara-community.html
+++ b/capybara-community.html
@@ -362,6 +362,46 @@
             background: #7a6248;
         }
 
+        /* Стили для лайков */
+        .like-btn {
+            background: #f0e6d2;
+            color: #8b7355;
+            border: 2px solid #d4a574;
+            padding: calc(var(--spacing-unit) * 0.75) calc(var(--spacing-unit) * 1.5);
+            border-radius: 6px;
+            font-size: 13px;
+            cursor: pointer;
+            transition: all var(--transition);
+            font-weight: 600;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .like-btn:hover {
+            background: #d4a574;
+            color: white;
+            transform: scale(1.05);
+        }
+
+        .like-btn.liked {
+            background: #d4a574;
+            color: white;
+            border-color: #8b7355;
+        }
+
+        .comment-footer {
+            margin-top: calc(var(--spacing-unit) * 1);
+            padding-top: calc(var(--spacing-unit) * 1);
+            border-top: 1px solid #e0d5c7;
+        }
+
+        .post-comment-footer {
+            margin-top: calc(var(--spacing-unit) * 0.75);
+            padding-top: calc(var(--spacing-unit) * 0.75);
+            border-top: 1px solid #e0d5c7;
+        }
+
         /* Комментарии */
         .comments-section {
             padding: calc(var(--spacing-unit) * 12) 0;
@@ -702,6 +742,7 @@
     <script>
         // Инициализация главной страницы
         document.addEventListener('DOMContentLoaded', function() {
+            initLikes();
             updateAuthUI();
             loadComments('home');
             loadPosts();
