Migrate to Netlify DB with PostgreSQL backend
- Created database schema with Drizzle ORM
- Implemented Netlify Functions for API endpoints
- Created auth, comments, posts, and likes endpoints
- Added new capybara-script-api.js with API integration
- Generated database migrations
- Updated all HTML files to use new API script

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
     </footer>
 
     <!-- Script -->
-    <script src="capybara-script.js"></script>
+    <script src="capybara-script-api.js"></script>
     <script>
         // Update navigation based on auth status
         function updateNavigation() {
