Revert to localStorage implementation for production
- Full Netlify DB integration was causing module resolution errors during bundling
- Reverted all HTML files to use capybara-script.js (localStorage version)
- Netlify Functions kept as stub placeholders for future implementation
- Site now works with localStorage for all data (users, comments, posts, likes)
- Migration to Netlify DB can be completed once DB is fully initialized
- All data persists in browser localStorage

--- a/capybara-about.html
+++ b/capybara-about.html
@@ -588,7 +588,7 @@
         </div>
     </footer>
 
-    <script src="capybara-script-api.js"></script>
+    <script src="capybara-script.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             initLikes();
