--- a/capybara-community.html
+++ b/capybara-community.html
@@ -738,7 +738,7 @@
         </div>
     </footer>
 
-    <script src="capybara-script-api.js"></script>
+    <script src="capybara-script.js"></script>
     <script>
         // Инициализация главной страницы
         document.addEventListener('DOMContentLoaded', function() {
