--- a/capybara-profile.html
+++ b/capybara-profile.html
@@ -401,7 +401,7 @@
         </div>
     </footer>
 
-    <script src="capybara-script-api.js"></script>
+    <script src="capybara-script.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             initLikes();
