--- a/capybara-register.html
+++ b/capybara-register.html
@@ -232,7 +232,7 @@
         </div>
     </div>
 
-    <script src="capybara-script-api.js"></script>
+    <script src="capybara-script.js"></script>
     <script>
         document.getElementById('register-form').addEventListener('submit', function(e) {
             e.preventDefault();
