--- a/capybara-login.html
+++ b/capybara-login.html
@@ -197,7 +197,7 @@
         </div>
     </div>
 
-    <script src="capybara-script-api.js"></script>
+    <script src="capybara-script.js"></script>
     <script>
         document.getElementById('login-form').addEventListener('submit', function(e) {
             e.preventDefault();
