Optimize page loading performance: add lazy loading, font preloading, async scripts, and caching headers

--- a/capybara-profile.html
+++ b/capybara-profile.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Профиль - Капибара Сообщество</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
     <style>
         * {
@@ -401,7 +403,7 @@
         </div>
     </footer>
 
-    <script src="capybara-script.js"></script>
+    <script src="capybara-script.js" async defer></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             initLikes();
