--- a/capybara-about.html
+++ b/capybara-about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>О капибарах - Капибара Сообщество</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
     <style>
         * {
@@ -229,6 +231,7 @@
             cursor: pointer;
             transition: var(--transition);
             box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            will-change: transform;
         }
 
         .gallery-item img {
@@ -236,6 +239,20 @@
             height: 100%;
             object-fit: cover;
             transition: transform 0.3s ease;
+            background-color: #e8e8e8;
+            display: block;
+            will-change: transform;
+        }
+
+        .gallery-item img[loading="lazy"] {
+            background: linear-gradient(90deg, #e8e8e8 25%, #f0f0f0 50%, #e8e8e8 75%);
+            background-size: 200% 100%;
+            animation: loading 1.5s infinite;
+        }
+
+        @keyframes loading {
+            0% { background-position: 200% 0; }
+            100% { background-position: -200% 0; }
         }
 
         .gallery-item:hover img {
@@ -488,7 +505,7 @@
                 <h2> Галерея капибар</h2>
                 <div class="gallery-grid">
                     <div class="gallery-item">
-                        <img src="images/загруженное.jpg" alt="Капибара в воде">
+                        <img src="images/загруженное.jpg" alt="Капибара в воде" loading="lazy" decoding="async" width="400" height="400">
                         <div class="gallery-caption">
                             <strong>Капибара в воде</strong>
                             <p>Отличные пловцы с перепончатыми лапами</p>
@@ -496,7 +513,7 @@
                     </div>
 
                     <div class="gallery-item">
-                        <img src="images/загруженное1.jpg" alt="Капибара на траве">
+                        <img src="images/загруженное1.jpg" alt="Капибара на траве" loading="lazy" decoding="async" width="400" height="400">
                         <div class="gallery-caption">
                             <strong>Капибара на траве</strong>
                             <p>Едят около 3.5 кг растительности в день</p>
@@ -504,7 +521,7 @@
                     </div>
 
                     <div class="gallery-item">
-                        <img src="images/загруженное2.jpg" alt="Портрет капибары">
+                        <img src="images/загруженное2.jpg" alt="Портрет капибары" loading="lazy" decoding="async" width="400" height="400">
                         <div class="gallery-caption">
                             <strong>Дружелюбный характер</strong>
                             <p>Спокойные и миролюбивые животные</p>
@@ -512,7 +529,7 @@
                     </div>
 
                     <div class="gallery-item">
-                        <img src="images/загруженное3.jpg" alt="Капибара в группе">
+                        <img src="images/загруженное3.jpg" alt="Капибара в группе" loading="lazy" decoding="async" width="400" height="400">
                         <div class="gallery-caption">
                             <strong>Социальные животные</strong>
                             <p>Живут группами от 10 до 100 особей</p>
@@ -520,7 +537,7 @@
                     </div>
 
                     <div class="gallery-item">
-                        <img src="images/загруженное4.jpg" alt="Капибара ест">
+                        <img src="images/загруженное4.jpg" alt="Капибара ест" loading="lazy" decoding="async" width="400" height="400">
                         <div class="gallery-caption">
                             <strong>Травоядные</strong>
                             <p>Питаются травой и водными растениями</p>
@@ -528,7 +545,7 @@
                     </div>
 
                     <div class="gallery-item">
-                        <img src="images/капибара среди цветов🌸.jpg" alt="Капибара отдыхает">
+                        <img src="images/капибара среди цветов🌸.jpg" alt="Капибара отдыхает" loading="lazy" decoding="async" width="400" height="400">
                         <div class="gallery-caption">
                             <strong>Отдыхают много</strong>
                             <p>До 16 часов в день отдыхают и спят</p>
@@ -588,7 +605,7 @@
         </div>
     </footer>
 
-    <script src="capybara-script.js"></script>
+    <script src="capybara-script.js" async defer></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             initLikes();
