--- a/capybara-community.html
+++ b/capybara-community.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Капибара Сообщество - Добро пожаловать!</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
     <style>
         * {
@@ -738,7 +740,7 @@
         </div>
     </footer>
 
-    <script src="capybara-script.js"></script>
+    <script src="capybara-script.js" async defer></script>
     <script>
         // Инициализация главной страницы
         document.addEventListener('DOMContentLoaded', function() {
