--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🐹 Capybara Community - Сообщество любителей капибар</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         * {
@@ -451,7 +453,7 @@
     </footer>
 
     <!-- Script -->
-    <script src="capybara-script.js"></script>
+    <script src="capybara-script.js" async defer></script>
     <script>
         // Update navigation based on auth status
         function updateNavigation() {
